--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ $(".btn").text(btn);
 };
 });
 
+
+
+
 $(".btn").click(function(){
 
 
@@ -88,7 +91,7 @@ $("#done").click(function(){
 
 <button id="start">Start</button>
 <br>
-<div id="buttons1" class="btn-group btn-group-mn">
+<div id="buttons1" class="">
 
 <button class="btn"></button>
 <button class="btn"></button>
